# attractor

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  attractor-spec.md  project-context.md  tmux-design.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
_bmad-output/: deferred-work.md  sprint-status.yaml
_bmad-output/stories/: 2-1-app-shell-and-split-pane-layout.md  2-2-react-flow-canvas-with-custom-node-renderers.md  2-3-shape-palette-and-node-edge-creation-and-deletion.md  2-9-continuous-lint-canvas-markers-and-lint-gate-on-save.md
cli/: CMakeLists.txt  cli_utils.hpp  main.cpp
cli/backends/: backend_utils.hpp  claude_headless_backend.cpp  claude_headless_backend.hpp  claude_tmux_backend.cpp  claude_tmux_backend.hpp  handoff_aware_backend.cpp  handoff_aware_backend.hpp
cli/scripts/: att-headless-backend.settings.json  att-pretooluse.sh  att-session-start.sh  att-status-line.sh  att-stop.sh  att-tmux-backend.settings.debug.json  att-tmux-backend.settings.json  att-tmux-backend.settings.nolog.json  context-ceiling.sh  ctx-usage.sh  logger.sh  next-story.sh  story-status.sh
cmake/: attractorConfig.cmake.in  vcpkg_compat.cmake
examples/: bmad.dot  bmad2.dot  deploy_tool.sh  feature-pipeline.dot  simple.dot  test_tool.sh
include/attractor/: artifact_store.hpp  checkpoint.hpp  condition_eval.hpp  context.hpp  dot_parser.hpp  engine.hpp  events.hpp  graph.hpp  handler.hpp  handler_registry.hpp  http_server.hpp  interviewer.hpp  run_config.hpp  transform.hpp  types.hpp  validator.hpp
include/attractor/backends/: noop_backend.hpp
include/attractor/handlers/: codergen_handler.hpp  conditional_handler.hpp  exit_handler.hpp  fan_in_handler.hpp  manager_loop_handler.hpp  parallel_handler.hpp  start_handler.hpp  tool_handler.hpp  wait_for_human_handler.hpp
src/: CMakeLists.txt  artifact_store.cpp  attractor.cpp  checkpoint.cpp  context.cpp  dot_parser.cpp  engine.cpp  events.cpp  graph.cpp  handler_registry.cpp  transform.cpp  types.cpp  validator.cpp
src/backends/: noop_backend.cpp
src/handlers/: codergen_handler.cpp  conditional_handler.cpp  exit_handler.cpp  fan_in_handler.cpp  manager_loop_handler.cpp  parallel_handler.cpp  start_handler.cpp  tool_handler.cpp  wait_for_human_handler.cpp
src/interviewers/: auto_approve_interviewer.cpp  callback_interviewer.cpp  console_interviewer.cpp  queue_interviewer.cpp  recording_interviewer.cpp
tests/: CMakeLists.txt
tests/integration/: parity_matrix_test.cpp  smoke_test.cpp
tests/integration/backends/: claude_tmux_backend_integration_test.cpp
tests/support/: attractor_test_support.hpp  graph_builders.hpp  main_stub.cpp  temp_logs.hpp
tests/support/snitch_compat/snitch/: snitch.hpp
tests/unit/: artifact_store_test.cpp  checkpoint_test.cpp  condition_eval_test.cpp  context_test.cpp  dot_parser_test.cpp  edge_selection_test.cpp  engine_test.cpp  events_test.cpp  goal_gate_test.cpp  graph_model_test.cpp  handler_registry_test.cpp  node_variant_test.cpp  retry_test.cpp  transform_test.cpp  types_test.cpp  validator_test.cpp
tests/unit/backends/: att_session_start_test.cpp  backend_utils_transcript_test.cpp  claude_headless_backend_test.cpp  claude_tmux_backend_test.cpp  cli_main_test.cpp  handoff_aware_backend_test.cpp
tests/unit/handlers/: codergen_handler_test.cpp  conditional_handler_test.cpp  exit_handler_test.cpp  fan_in_handler_test.cpp  manager_loop_handler_test.cpp  parallel_handler_test.cpp  start_handler_test.cpp  tool_handler_test.cpp  wait_for_human_handler_test.cpp
tests/unit/interviewers/: auto_approve_interviewer_test.cpp  callback_interviewer_test.cpp  console_interviewer_test.cpp  queue_interviewer_test.cpp  recording_interviewer_test.cpp
